Fixed box-sizing issue withwhite space showing up, border-box is my friend

--- a/scss/_biography.scss
+++ b/scss/_biography.scss
@@ -1,11 +1,15 @@
 #bio {
     display: block;
+    width: 100%;
     padding: 20px;
     background-color: $lightblue;
+    overflow-x: hidden;
     img {
         margin: 20px 0px 20px 0;
         border-radius: 50%;
         border: 10px solid $darkblue;
+        width: calc(100% - 20px);
+        max-width: 300px;
     }
     h1 {
         margin-bottom: 10px;
@@ -25,7 +29,7 @@
     background-color: $backgroundshade;
     padding: 20px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, .4);
-    max-width: 600px;
-    margin: auto; 
+    max-width: calc(600px - 20px);
+    margin: auto;
     color: $darkblue;
 }
