--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,7 +1,8 @@
 #header {
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
+    
+    overflow-x: hidden; 
     background-image: url('../img/heroImage.JPG');
     background-size: cover;
     background-position: center;
